adopt virtual threads for ad-hoc background work
new Thread() -> Thread.ofVirtual() at 16 sites across the UI shell:
Application, LocationChanger, DesktopManager, MuAction,
ShowServerConnectionsDialog, FolderPanel, StatusBar (autoUpdateThread),
OpenWithMenu, FileTable, QuickSearch, CheckVersionDialog,
AppearancePanel, PropertiesDialog (repaintThread), QuickListWithIcons,
AsyncPanel, PopupButton.

Anonymous Thread subclasses became lambdas where the body had no
incompatible monitor usage; named threads (StatusBar, PropertiesDialog,
QuickSearch) keep their identifier via .name(...).unstarted(). Daemon
flags dropped where present — virtual threads are inherently
non-blocking for JVM shutdown.

ExecutorService pools that fan out construction work onto multiple
threads now use Executors.newVirtualThreadPerTaskExecutor():
- Application.run() (was newFixedThreadPool(12))
- MainFrame ctor and copy-ctor (each was newFixedThreadPool(4))
These pools are I/O-bound (FolderPanel construction, command setup);
unbounded virtual threads beat a fixed pool here.

Two threads were intentionally NOT migrated:
- FileJob.jobThread keeps a platform thread because pause/resume goes
  through synchronized(pauseLock) + Object.wait/notify; on Java 21 that
  pins virtual threads back to their carrier.
- StressTester is a debugging entry point.

FolderChangeMonitor: replace Thread.sleep(TICK) polling with
MONITOR_WAKE.wait(TICK) and notifyAll() it from windowGainedFocus().
Window activation now triggers an immediate refresh check instead of
waiting up to 300ms for the next tick; the long-form fix
(WatchService strategy for local FS, polling for remote) stays
tracked separately.

Compile + ThemeDataTest still green on JDK 21.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>