@@ -1309,31 +1309,28 @@ public class FileTable extends JTable implements MouseListener, MouseMotionListe
                     // the filename/date/permission editor
                     if (hasFocus() && System.currentTimeMillis() - focusGainedTime > 100) {
                         // Create a new thread and sleep long enough to ensure that this click was not the first of a double click
-                        new Thread() {
-                            @Override
-                            public void run() {
-                                try { sleep(800); }
-                                catch (InterruptedException e) {}
+                        Thread.ofVirtual().start(() -> {
+                            try { Thread.sleep(800); }
+                            catch (InterruptedException ie) {}
 
-                                // Do not execute this block (cancel editing) if:
-                                // - a double click was made in the last second
-                                // - current row changed
-                                // - isEditing() is true which could happen if multiple clicks were made
-                                if ((System.currentTimeMillis() - lastDoubleClickTimestamp) > 1000 && row == currentRow) {
-                                    if (column == Column.NAME) {
-                                        if(!isEditing())
-                                            editCurrentFilename();
-                                    }
-                                    else if(column == Column.DATE) {
-                                        ActionManager.performAction(ActionType.ChangeDate, mainFrame);
-                                    }
-                                    else if(column == Column.PERMISSIONS) {
-                                        if(getSelectedFile().getChangeablePermissions().getIntValue()!=0)
-                                            ActionManager.performAction(ActionType.ChangePermissions, mainFrame);
-                                    }
+                            // Do not execute this block (cancel editing) if:
+                            // - a double click was made in the last second
+                            // - current row changed
+                            // - isEditing() is true which could happen if multiple clicks were made
+                            if ((System.currentTimeMillis() - lastDoubleClickTimestamp) > 1000 && row == currentRow) {
+                                if (column == Column.NAME) {
+                                    if(!isEditing())
+                                        editCurrentFilename();
+                                }
+                                else if(column == Column.DATE) {
+                                    ActionManager.performAction(ActionType.ChangeDate, mainFrame);
+                                }
+                                else if(column == Column.PERMISSIONS) {
+                                    if(getSelectedFile().getChangeablePermissions().getIntValue()!=0)
+                                        ActionManager.performAction(ActionType.ChangePermissions, mainFrame);
                                 }
                             }
-                        }.start();
+                        });
                     }
                 }
             }
